add property name in the docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
 version: '2'
 services:
   zookeeper:
+    container_name: zookeeper_container
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -25,6 +26,7 @@ services:
     # See https://rmoff.net/2018/08/02/kafka-listeners-explained/ for details
     # "`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-
     #
+    container_name: kafka_container
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
